# rose

./: Cargo.toml  README.md
src/: error.rs  main.rs
src/fs_manager/: atomic_file.rs  cache.rs  mod.rs
src/image_manager/: cache.rs  mod.rs
