[package]
name = "rose"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mime = "0.3"
actix-web = "4.0.0-beta.10"
dotenv = "0.15"
uuid = { version = "0.8", features = ["v4", "serde"] }
thiserror = "1"
futures-util = "0.3"
tokio = { version = "1", features = ["fs"] }
pretty_env_logger = "0.4"
left-right = "0.11"
actix-rt = "2"
log = "0.4"
tokio-util = { version = "0.6", features = ["io"] }

[target.'cfg(not(target_os = "windows"))'.dependencies]
jemallocator = "0.3.2"